syntax = "proto3";

package com.example.sku;

option java_multiple_files = true;
option java_package = "com.example.sku.grpc";
option java_outer_classname = "SkuProto";

// Importações necessárias para os tipos que você usou
import "google/protobuf/timestamp.proto";
import "google/type/money.proto";
import "google/protobuf/wrappers.proto";

// --- Mensagens de Serviço ---

// Resposta simples para operações de escrita massiva
message SkuResponse {
  bool success = 1;
  string message = 2; // Opcional: para detalhar erros
}

// Busca por ID Único (sku_id)
message SkuGetByIdRequest {
  uint64 sku_id = 1;
}

// Busca por Warehouse
message SkuByWarehouseRequest {
  uint64 warehouse_id = 1;
}

// Busca por Item
message SkuByItemRequest {
  uint64 item_id = 1;
}

// Resposta para buscas que podem retornar múltiplos Skus (como por warehouse ou item)
message SkuListResponse {
  repeated Sku skus = 1;
}

// --- Definição do Service ---

service SkuService {
  // Recebe uma lista de Skus e retorna sucesso ou falha
  rpc ImportSkus(SkuRequest) returns (SkuResponse);

  // Busca um Sku específico pelo ID
  rpc GetById(SkuGetByIdRequest) returns (Sku);

  // Busca Skus vinculados a um armazém (Warehouse)
  rpc GetByWarehouse(SkuByWarehouseRequest) returns (SkuListResponse);

  // Busca Skus vinculados a um item específico
  rpc GetByItem(SkuByItemRequest) returns (SkuListResponse);
}

// --- Suas Mensagens Originais ---

message Sku {
  enum AvailabilityType {
    READY_TO_SHIP = 0;
    MADE_TO_ORDER = 1;
    OPEN_BOX = 2;
    USED = 3;
    REFURBISHED = 4;
  }

  optional uint64 sku_id = 1;
  optional uint64 warehouse_id = 2;
  uint64 item_id = 3;
  uint32 amount = 4;
  string country_code = 5;
  AvailabilityType availability_type = 6;
  google.type.Money base_price = 7;
  google.protobuf.Timestamp last_updated = 8;
}

message SkuRequest {
  repeated Sku skus = 1;
}